Fixed some plots at EDA

--- a/JupyBooks/EDA-tgts.ipynb
+++ b/JupyBooks/EDA-tgts.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | eval: true\n",
+    "# | eval: false\n",
     "\n",
     "# Load data\n",
     "import pandas as pd\n",
@@ -50,11 +50,13 @@
    "outputs": [],
    "source": [
     "\n",
-    "# | eval: true\n",
+    "# | eval: false\n",
     "\n",
     "import pyarrow.feather as ft\n",
     "import numpy as np\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "import multiprocessing\n",
     "\n",
     "TGT_DIR = '/mnt/data/sur/users/mrivera/Train-sims/4379fd40-9f0a/GNN-targets'  # Replace with actual path\n",
     "RAW_ODES_DIR = '/mnt/data/sur/users/mrivera/Train-sims/4379fd40-9f0a/raw-ODEs'\n",
@@ -74,11 +76,14 @@
     "    return ext, Bc, Ks, rel\n",
     "\n",
     "\n",
-    "def par_dat(ids, max_workers=8):\n",
-    "    with ThreadPoolExecutor(max_workers=max_workers) as executor:\n",
+    "def par_dat(ids, max_workers=None):\n",
+    "    if max_workers is None:\n",
+    "        max_workers = len(os.sched_getaffinity(0))  # Respects SLURM allocation\n",
+    "    # Parallel\n",
+    "    with ProcessPoolExecutor(max_workers=max_workers) as executor:\n",
     "        results = list(executor.map(read_data, ids))\n",
     "    # Unpack and convert to numpy arrays\n",
-    "    ext, Bc, Ks, rel= map(np.array, zip(*results))\n",
+    "    ext, Bc, Ks, rel = zip(*results)\n",
     "    # Flatten/concatenate the vectors\n",
     "    keys = ['extinctions', 'bray_curtis', 'keystone', 'relative']\n",
     "    data = {k: np.concatenate(v) for k, v in zip(keys, [ext, Bc, Ks, rel])}\n",
@@ -113,26 +118,24 @@
     "import numpy as np\n",
     "\n",
     "# srun --partition=interactive --time=00:40:00 --cpus-per-task=8 --mem=20G --pty bash\n",
-    "x1 = data20['relative']\n",
-    "x2 = data100['relative']\n",
-    "\n",
     "b1 = np.linspace(0, 1, 100)\n",
-    "ct1, _ = np.histogram(x1, bins=100)\n",
-    "ct2, _ = np.histogram(x2, bins=100)\n",
+    "ct1, _ = np.histogram(data20['relative'], bins=100)\n",
+    "ct2, _ = np.histogram(data100['relative'], bins=100)\n",
     "\n",
     "# Apply log\n",
-    "ct1_log = np.log1p(ct1) \n",
-    "ct2_log = np.log1p(ct2) \n",
+    "ct20_log = np.log1p(ct1) \n",
+    "ct100_log = np.log1p(ct2) \n",
     "\n",
     "# Plot distribution\n",
     "plt.clf()  # Clear the entire figure\n",
     "plt.figure(figsize=(12, 5))\n",
-    "plt.plot(b1, ct1_log, marker='o', linestyle='-', color='blue')\n",
-    "plt.plot(b1, ct2_log, marker='o', linestyle='-', color='red')\n",
+    "plt.plot(b1, ct20_log, marker='o', linestyle='-', color='blue', label='20 species')\n",
+    "plt.plot(b1, ct100_log, marker='o', linestyle='-', color='red', label='100 species')\n",
     "plt.xlabel('Relative frequencies')\n",
     "plt.ylabel('log(Frequency + 1)')\n",
     "plt.title('Distribution of relative frequencies')\n",
     "plt.tight_layout()\n",
+    "plt.legend(loc='upper right')\n",
     "plt.savefig('/mnt/data/sur/users/mrivera/Plots/RelFreq-distr.png', dpi=300)\n",
     "plt.close()\n"
    ]
@@ -176,8 +179,8 @@
     "import seaborn as sns\n",
     "\n",
     "# Generate counting \n",
-    "labels20, counts20 = np.unique(ext20, return_counts=True)\n",
-    "labels100, counts100 = np.unique(ext100, return_counts=True)\n",
+    "labels20, counts20 = np.unique(data20['extinctions'], return_counts=True)\n",
+    "labels100, counts100 = np.unique(data100['extinctions'], return_counts=True)\n",
     "\n",
     "def pie_dat(labels, counts):\n",
     "    # Filter by >5% of data\n",
@@ -197,19 +200,25 @@
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
     "colors = sns.color_palette('pastel')\n",
     "\n",
-    "# First pie chart\n",
-    "ax1.pie(pie_20, labels = pie_labels20, autopct='%1.1f%%', colors = colors,\n",
-    "        wedgeprops={'edgecolor': 'black', 'linewidth': 0.5},\n",
+    "# First pie chart 20 species\n",
+    "ax1.pie(pie_20, labels=pie_labels20, autopct='%1.1f%%', colors=colors,\n",
+    "        wedgeprops={'edgecolor': 'white', 'linewidth': 2},\n",
     "        startangle=90,\n",
+    "        textprops={'fontsize': 11, 'weight': 'bold'},\n",
+    "        pctdistance=0.85,\n",
+    "        explode=[0.05] * len(pie_20)  # Slightly separate all slices\n",
     "        )\n",
-    "ax1.set_title('Number of extinctions in 20 species data')\n",
+    "ax1.set_title('Number of extinctions in 20 species data', fontweight='bold')\n",
     "\n",
-    "# Second pie chart\n",
-    "ax2.pie(pie_100, labels=pie_labels100, autopct='%1.1f%%', colors = colors,\n",
-    "        wedgeprops={'edgecolor': 'black', 'linewidth': 0.5},\n",
+    "# Second pie chart 100 species\n",
+    "ax2.pie(pie_100, labels=pie_labels100, autopct='%1.1f%%', colors=colors,\n",
+    "        wedgeprops={'edgecolor': 'white', 'linewidth': 2},\n",
     "        startangle=90,\n",
+    "        textprops={'fontsize': 11, 'weight': 'bold'},\n",
+    "        pctdistance=0.85,\n",
+    "        explode=[0.05] * len(pie_100)  # Slightly separate all slices\n",
     "        )\n",
-    "ax2.set_title('Number of extinctions in 100 species data')\n",
+    "ax2.set_title('Number of extinctions in 100 species data', fontweight='bold')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig('/mnt/data/sur/users/mrivera/Plots/ext-pie.png', dpi = 300)  # Saves as PNG"
@@ -237,7 +246,7 @@
    "id": "070a628c",
    "metadata": {},
    "source": [
-    "We generate the distribution of extinctions."
+    "## HeatMap of relative frequency vs number of extinctions"
    ]
   },
   {
@@ -252,37 +261,58 @@
     "# Distribution of extinctions histogram\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from scipy.stats import gaussian_kde\n",
     "\n",
-    "# Get log-counts with 20 species\n",
-    "b1 = np.arange(0, 21, 1)\n",
-    "ct1, _ = np.histogram(ext20, bins=21)\n",
-    "ct1_log = np.log1p(ct1)  # log(count + 1) to avoid log(0)\n",
-    "mask = ct1_log > 0\n",
-    "\n",
-    "# Get log-counts with 20 species\n",
-    "b2 = np.arange(0, 101, 1)\n",
-    "ct2, _ = np.histogram(ext20, bins=101)\n",
-    "ct2_log = np.log1p(ct2)  # log(count + 1) to avoid log(0)\n",
-    "\n",
-    "# Create the plot\n",
+    "# Create figure with two subplots\n",
     "plt.clf()  # Clear the entire figure\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 5))\n",
     "\n",
-    "# Plot on first subplot\n",
-    "ax1.plot(b1, ct1_log, marker='o', linestyle='-', color='blue')\n",
-    "ax1.set_xlabel('Number of extinctions')\n",
-    "ax1.set_ylabel('log(Frequency + 1)')\n",
-    "ax1.set_title('Distribution with 20 species')\n",
-    "ax1.set_xlim(0, 20)\n",
+    "# Compute 2D histogram\n",
+    "H, xedges, yedges = np.histogram2d(\n",
+    "    data20['relative'], \n",
+    "    data20['extinctions'], \n",
+    "    bins=[10, 10]\n",
+    ")\n",
     "\n",
-    "# Plot on first subplot\n",
-    "ax2.plot(b2, ct2_log, marker='o', linestyle='-', color='red')\n",
-    "ax2.set_xlabel('Number of extinctions')\n",
-    "ax2.set_ylabel('log(Frequency + 1)')\n",
-    "ax2.set_title('Distribution with 100 species')\n",
-    "ax2.set_xlim(0, 100)\n",
+    "# Apply log transformation to counts (add 1 to avoid log(0))\n",
+    "H_log = np.log1p(H.T)  \n",
+    "H_log_masked = np.ma.masked_where(H_log == 0, H_log)\n",
+    "\n",
+    "# Create the heatmap on ax1\n",
+    "im1 = ax1.imshow(\n",
+    "    H_log, # Transpose to match plot orientation\n",
+    "    origin='lower',\n",
+    "    aspect='auto',\n",
+    "    extent=[xedges[0], xedges[-1], yedges[0], yedges[-1]],\n",
+    "    cmap='coolwarm',\n",
+    "    interpolation='nearest'\n",
+    ")\n",
+    "\n",
+    "fig.colorbar(im1, ax=ax1, label='Log(Frequency)')\n",
+    "ax1.set_xlabel('Relative Frequency')\n",
+    "ax1.set_ylabel('Number of Extinctions')\n",
+    "ax1.set_title('20 Species')\n",
+    "\n",
+    "# For 100 species (ax2)\n",
+    "H100, xedges100, yedges100 = np.histogram2d(\n",
+    "    data100['relative'], \n",
+    "    data100['extinctions'], \n",
+    "    bins=[10, 10]\n",
+    ")\n",
+    "H100_log = np.log1p(H100.T)\n",
+    "\n",
+    "im2 = ax2.imshow(\n",
+    "    H100_log, \n",
+    "    origin='lower',\n",
+    "    aspect='auto',\n",
+    "    extent=[xedges100[0], xedges100[-1], yedges100[0], yedges100[-1]],\n",
+    "    cmap='coolwarm',\n",
+    "    interpolation='nearest'\n",
+    ")\n",
+    "\n",
+    "fig.colorbar(im2, ax=ax2, label='Log(Frequency)')\n",
+    "ax2.set_xlabel('Relative Frequency')\n",
+    "ax2.set_ylabel('Number of Extinctions')\n",
+    "ax2.set_title('100 Species')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig('/mnt/data/sur/users/mrivera/Plots/exts-distr.png', dpi=300)\n",
@@ -315,6 +345,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d79d39f",
+   "metadata": {},
+   "source": [
+    "### Pearson correlation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "32e8ba93",
@@ -325,22 +363,40 @@
     "# | eval: false\n",
     "\n",
     "import numpy as np \n",
-    "# from scipy.stats import pearsonr\n",
+    "from scipy.stats import pearsonr\n",
     "from scipy.stats import spearmanr\n",
     "import itertools\n",
     "\n",
-    "def correlate(var1, var2, name1, name2, specs):\n",
-    "    corr, pvalue = spearmanr(var1, var2)\n",
-    "    print(f'>> {name1} is correlated with {name2} with r={corr:.2f} '\n",
-    "          f'for {specs} species. Statistical significance: pval={pvalue:.2e}\\n')\n",
+    "def pearson_cor(var1, var2, name1, name2, specs):\n",
+    "    corr, pvalue = pearsonr(var1, var2)\n",
+    "    return f'>> Pearson correlation of {name1} with {name2}, is correlated with r={corr:.2f} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
+    "    \n",
     "\n",
-    "def run_correlation_suite(data, n_species):\n",
+    "def spearman_cor(var1, var2, name1, name2, specs):\n",
+    "    corr, pvalue = spearmanr(var1, var2)\n",
+    "    return f'>> Spearman correlation of {name1} with {name2}, is correlated with r={corr:.2f} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
+    "\n",
+    "def run_correlation(data, n_species):\n",
+    "    # Create list for lines\n",
+    "    lines_pearson = []\n",
+    "    lines_spearman = []\n",
+    "    # Generate combinations\n",
     "    keys = ['extinctions', 'bray_curtis', 'keystone', 'relative']\n",
-    "    pairs = list(itertools.combinations(keys, 2))           # Generate combinations\n",
+    "    pairs = list(itertools.combinations(keys, 2))           \n",
     "    for p in pairs:\n",
     "        name1, name2 = p[0], p[1]                           # Variable names\n",
     "        var1, var2 = data20[p[0]], data20[p[1]]             # Data\n",
-    "        correlate(var1, var2, name1, name2, n_species)\n"
+    "        lines_pearson.append( pearson_cor(var1, var2, name1, name2, n_species) )\n",
+    "        lines_spearman.append( spearman_cor(var1, var2, name1, name2, n_species) )\n",
+    "    # Write files\n",
+    "    with open(f'/mnt/data/sur/users/mrivera/Logs/pearson{n_species}_correlation.txt', 'w') as f:\n",
+    "        f.writelines(lines_pearson)\n",
+    "    with open(f'/mnt/data/sur/users/mrivera/Logs/spearman{n_species}_correlation.txt', 'w') as f:\n",
+    "        f.writelines(lines_spearman)\n",
+    "\n",
+    "# Run it\n",
+    "run_correlation(data20, 20)\n",
+    "run_correlation(data100, 100)"
    ]
   },
   {
@@ -358,8 +414,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run correlation analyses\n",
-    "run_correlation_suite(data20, 20)"
+    "with open('/mnt/data/sur/users/mrivera/Logs/pearson20_correlation.txt', 'r') as f:\n",
+    "    content = f.read()\n",
+    "    print(content)\n",
+    "\n",
+    "with open('/mnt/data/sur/users/mrivera/Logs/spearman20_correlation.txt', 'r') as f:\n",
+    "    content = f.read()\n",
+    "    print(content)"
    ]
   },
   {
@@ -377,8 +438,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run correlation analyses\n",
-    "run_correlation_suite(data100, 100)"
+    "with open('/mnt/data/sur/users/mrivera/Logs/pearson100_correlation.txt', 'r') as f:\n",
+    "    content = f.read()\n",
+    "    print(content)\n",
+    "\n",
+    "with open('/mnt/data/sur/users/mrivera/Logs/spearman100_correlation.txt', 'r') as f:\n",
+    "    content = f.read()\n",
+    "    print(content)"
    ]
   },
   {
@@ -429,7 +495,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "# | eval: false\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Convert to pandas DataFrame if it's not already\n",
+    "data20_df = pd.DataFrame(data20)\n",
+    "\n",
+    "# Then create pairplot\n",
+    "pairplot = sns.pairplot(data20_df[['extinctions', 'bray_curtis', 'keystone', 'relative']])\n",
+    "pairplot.savefig('/mnt/data/sur/users/mrivera/Plots/pairplot.png', dpi=300)\n",
+    "plt.close()\n",
     "\n"
    ]
   },
@@ -500,6 +577,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | eval: false\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "\n",
