Added old way for data generation. Still need to see why correlation is different

--- a/JupyBooks/EDA-tgts.ipynb
+++ b/JupyBooks/EDA-tgts.ipynb
@@ -96,6 +96,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abf4d048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Pool\n",
+    "from scipy.stats import pearsonr\n",
+    "from scipy.stats import spearmanr\n",
+    "import pyarrow.feather as ft\n",
+    "import numpy as np \n",
+    "\n",
+    "def read_data_old(id):\n",
+    "    x = ft.read_table(os.path.join(tgt_dir, f'tgt_{id}.feather'))\n",
+    "    ext = x['new_ext'].to_pandas()\n",
+    "    Bc = round(x['BC_diss'].to_pandas(), 5)\n",
+    "    Ks = round(x['K_s'].to_pandas(), 5)\n",
+    "    return ext, Bc, Ks\n",
+    "\n",
+    "# This line is for testing ONLY \n",
+    "def par_dat_old(ids):\n",
+    "    ext, Bc, Ks = [], [], []\n",
+    "    if __name__ == '__main__':\n",
+    "        with Pool(processes=8) as pool:\n",
+    "            results = pool.map(read_data_old, ids)\n",
+    "        # Unpack and convert to numpy arrays\n",
+    "        ext, Bc, Ks = map(np.array, zip(*results))\n",
+    "    return ext, Bc, Ks\n",
+    "\n",
+    "id100 = data.loc[data['n_species'] == 100]['id']\n",
+    "ext100, Bc100, Ks100 =  par_dat_old(ids=id100)\n",
+    "corr, pvalue = pearsonr(ext100.flatten(), Bc100.flatten())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a6ac8814",
    "metadata": {},
@@ -369,12 +404,12 @@
     "\n",
     "def pearson_cor(var1, var2, name1, name2, specs):\n",
     "    corr, pvalue = pearsonr(var1, var2)\n",
-    "    return f'>> Pearson correlation of {name1} with {name2}, is correlated with r={corr:.2f} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
+    "    return f'>> Pearson correlation of {name1} with {name2}, is correlated with r={corr} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
     "    \n",
     "\n",
     "def spearman_cor(var1, var2, name1, name2, specs):\n",
     "    corr, pvalue = spearmanr(var1, var2)\n",
-    "    return f'>> Spearman correlation of {name1} with {name2}, is correlated with r={corr:.2f} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
+    "    return f'>> Spearman correlation of {name1} with {name2}, is correlated with r={corr} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
     "\n",
     "def run_correlation(data, n_species):\n",
     "    # Create list for lines\n",
@@ -506,8 +541,24 @@
     "# Then create pairplot\n",
     "pairplot = sns.pairplot(data20_df[['extinctions', 'bray_curtis', 'keystone', 'relative']])\n",
     "pairplot.savefig('/mnt/data/sur/users/mrivera/Plots/pairplot.png', dpi=300)\n",
-    "plt.close()\n",
-    "\n"
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05eb4a29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/pairplot.png')\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.imshow(img)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
    ]
   },
   {
