--- a/JupyBooks/EDA-tgts.ipynb
+++ b/JupyBooks/EDA-tgts.ipynb
@@ -57,77 +57,73 @@
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "from concurrent.futures import ProcessPoolExecutor\n",
     "import multiprocessing\n",
+    "from multiprocessing import Pool\n",
     "\n",
     "TGT_DIR = '/mnt/data/sur/users/mrivera/Train-sims/4379fd40-9f0a/GNN-targets'  # Replace with actual path\n",
     "RAW_ODES_DIR = '/mnt/data/sur/users/mrivera/Train-sims/4379fd40-9f0a/raw-ODEs'\n",
     "\n",
     "def read_data(id):\n",
-    "    # Load targets\n",
-    "    x = ft.read_table(os.path.join(TGT_DIR, f'tgt_{id}.feather'))\n",
+    "    # Load targets - read only needed columns\n",
+    "    x = ft.read_table(\n",
+    "        os.path.join(TGT_DIR, f'tgt_{id}.feather'),\n",
+    "        columns=['new_ext', 'BC_diss', 'K_s']\n",
+    "    )\n",
+    "    # Convert to numpy - PyArrow arrays are read-only, so copy for rounding\n",
     "    ext = x['new_ext'].to_numpy()\n",
     "    Bc = np.round(x['BC_diss'].to_numpy(), 5)\n",
     "    Ks = np.round(x['K_s'].to_numpy(), 5)\n",
-    "    # Load relative frequency\n",
+    "    # Load relative frequency - read only last column\n",
     "    y = ft.read_table(os.path.join(RAW_ODES_DIR, f'O_{id}.feather'))\n",
     "    freq = y.column(-1).to_numpy()\n",
-    "    # Calculate relative frequency \n",
+    "    # Vectorized relative frequency calculation\n",
     "    freq_sum = freq.sum()\n",
-    "    rel = freq / freq_sum if freq_sum != 0 else np.zeros_like(freq)\n",
+    "    rel = freq / freq_sum if freq_sum != 0 else freq * 0  # Faster than zeros_like\n",
     "    return ext, Bc, Ks, rel\n",
     "\n",
     "\n",
-    "def par_dat(ids, max_workers=None):\n",
+    "\n",
+    "def par_dat_preallocate(ids, max_workers=None):\n",
+    "    # Detect number of cores\n",
     "    if max_workers is None:\n",
-    "        max_workers = len(os.sched_getaffinity(0))  # Respects SLURM allocation\n",
-    "    # Parallel\n",
+    "        max_workers = len(os.sched_getaffinity(0))\n",
+    "    # 4 batches per worker\n",
+    "    chunksize = max(1, len(ids) // (max_workers * 4))\n",
+    "    # Parallelize function\n",
     "    with ProcessPoolExecutor(max_workers=max_workers) as executor:\n",
-    "        results = list(executor.map(read_data, ids))\n",
-    "    # Unpack and convert to numpy arrays\n",
-    "    ext, Bc, Ks, rel = zip(*results)\n",
-    "    # Flatten/concatenate the vectors\n",
-    "    keys = ['extinctions', 'bray_curtis', 'keystone', 'relative']\n",
-    "    data = {k: np.concatenate(v) for k, v in zip(keys, [ext, Bc, Ks, rel])}\n",
-    "    return data\n",
-    "     \n",
+    "        results = list(executor.map(read_data, ids, chunksize=chunksize))\n",
+    "    # Calculate total sizes\n",
+    "    size_ext = sum(len(r[0]) for r in results)\n",
+    "    size_Bc = sum(len(r[1]) for r in results)\n",
+    "    size_Ks = sum(len(r[2]) for r in results)\n",
+    "    size_rel = sum(len(r[3]) for r in results)\n",
+    "    # Pre-allocate output arrays\n",
+    "    ext_all = np.empty(size_ext, dtype=results[0][0].dtype)\n",
+    "    Bc_all = np.empty(size_Bc, dtype=results[0][1].dtype)\n",
+    "    Ks_all = np.empty(size_Ks, dtype=results[0][2].dtype)\n",
+    "    rel_all = np.empty(size_rel, dtype=results[0][3].dtype)\n",
+    "    # Fill arrays efficiently\n",
+    "    pos_ext = pos_Bc = pos_Ks = pos_rel = 0\n",
+    "    for ext, Bc, Ks, rel in results:\n",
+    "        n_ext, n_Bc, n_Ks, n_rel = len(ext), len(Bc), len(Ks), len(rel)\n",
+    "        ext_all[pos_ext:pos_ext+n_ext] = ext\n",
+    "        Bc_all[pos_Bc:pos_Bc+n_Bc] = Bc\n",
+    "        Ks_all[pos_Ks:pos_Ks+n_Ks] = Ks\n",
+    "        rel_all[pos_rel:pos_rel+n_rel] = rel\n",
+    "        pos_ext += n_ext\n",
+    "        pos_Bc += n_Bc\n",
+    "        pos_Ks += n_Ks\n",
+    "        pos_rel += n_rel\n",
+    "    return {\n",
+    "        'extinctions': ext_all,\n",
+    "        'bray_curtis': Bc_all,\n",
+    "        'keystone': Ks_all,\n",
+    "        'relative': rel_all\n",
+    "    }\n",
+    "\n",
     "        \n",
     "# 20 (specs)* Number of simulations with 20 species\n",
-    "data20 = par_dat(ids=ids20)\n",
-    "data100 = par_dat(ids=ids100)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abf4d048",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from multiprocessing import Pool\n",
-    "from scipy.stats import pearsonr\n",
-    "from scipy.stats import spearmanr\n",
-    "import pyarrow.feather as ft\n",
-    "import numpy as np \n",
-    "\n",
-    "def read_data_old(id):\n",
-    "    x = ft.read_table(os.path.join(tgt_dir, f'tgt_{id}.feather'))\n",
-    "    ext = x['new_ext'].to_pandas()\n",
-    "    Bc = round(x['BC_diss'].to_pandas(), 5)\n",
-    "    Ks = round(x['K_s'].to_pandas(), 5)\n",
-    "    return ext, Bc, Ks\n",
-    "\n",
-    "# This line is for testing ONLY \n",
-    "def par_dat_old(ids):\n",
-    "    ext, Bc, Ks = [], [], []\n",
-    "    if __name__ == '__main__':\n",
-    "        with Pool(processes=8) as pool:\n",
-    "            results = pool.map(read_data_old, ids)\n",
-    "        # Unpack and convert to numpy arrays\n",
-    "        ext, Bc, Ks = map(np.array, zip(*results))\n",
-    "    return ext, Bc, Ks\n",
-    "\n",
-    "id100 = data.loc[data['n_species'] == 100]['id']\n",
-    "ext100, Bc100, Ks100 =  par_dat_old(ids=id100)\n",
-    "corr, pvalue = pearsonr(ext100.flatten(), Bc100.flatten())"
+    "data20 = par_dat_preallocate(ids=ids20)\n",
+    "data100 = par_dat_preallocate(ids=ids100)\n"
    ]
   },
   {
@@ -277,6 +273,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1519f51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the fugure\n",
+    "plt.clf()  # Clear the entire figure\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "colors = sns.color_palette('pastel')\n",
+    "\n",
+    "# Get histogram data\n",
+    "counts, bins, patches = np.histogram(data20['extinctions'], bins=20)\n",
+    "counts_log = np.log1p(counts)  # log(x+1)\n",
+    "ax1.bar(bins[:-1], counts_log, width=np.diff(bins), edgecolor='black', \n",
+    "        color = colors[0], linewidth=1.5, align='edge')\n",
+    "ax1.set_xlabel('Number of extinctions', fontsize=12, fontweight='bold')\n",
+    "ax1.set_ylabel('log(Frequency + 1)', fontsize=12, fontweight='bold')\n",
+    "ax1.set_title('Extinctions with 20 species', fontsize=14, fontweight='bold', pad=15)  # Fixed title\n",
+    "ax1.set_xlim(0, 20)  # Set x-axis limit to 20\n",
+    "\n",
+    "# Get histogram data\n",
+    "counts, bins, patches = np.histogram(data100['extinctions'], bins=100)\n",
+    "counts_log = np.log1p(counts)  # log(x+1)\n",
+    "ax2.bar(bins[:-1], counts_log, width=np.diff(bins), edgecolor='black', \n",
+    "        color = colors[1], linewidth=1.5, align='edge')\n",
+    "ax2.set_xlabel('Number of extinctions', fontsize=12, fontweight='bold')\n",
+    "ax2.set_ylabel('log(Frequency + 1)', fontsize=12, fontweight='bold')\n",
+    "ax2.set_title('Extinctions with 100 species', fontsize=14, fontweight='bold', pad=15)  # Fixed title\n",
+    "ax2.set_xlim(0, 100)  # Set x-axis limit to 100\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/ext-histogram.png', dpi = 300)  # Saves as PNG\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6af0bd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/ext-histogram.png')\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.imshow(img)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "070a628c",
    "metadata": {},
@@ -404,12 +453,13 @@
     "\n",
     "def pearson_cor(var1, var2, name1, name2, specs):\n",
     "    corr, pvalue = pearsonr(var1, var2)\n",
-    "    return f'>> Pearson correlation of {name1} with {name2}, is correlated with r={corr} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
+    "    return f'>> Pearson correlation of {name1} with {name2}, is correlated with r={corr:.6f} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
     "    \n",
     "\n",
     "def spearman_cor(var1, var2, name1, name2, specs):\n",
     "    corr, pvalue = spearmanr(var1, var2)\n",
-    "    return f'>> Spearman correlation of {name1} with {name2}, is correlated with r={corr} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
+    "    return f'>> Spearman correlation of {name1} with {name2}, is correlated with r={corr:.6f} for {specs} species. Statistical significance: pval={pvalue:.2e}\\n'\n",
+    "\n",
     "\n",
     "def run_correlation(data, n_species):\n",
     "    # Create list for lines\n",
@@ -420,7 +470,7 @@
     "    pairs = list(itertools.combinations(keys, 2))           \n",
     "    for p in pairs:\n",
     "        name1, name2 = p[0], p[1]                           # Variable names\n",
-    "        var1, var2 = data20[p[0]], data20[p[1]]             # Data\n",
+    "        var1, var2 = data[p[0]], data[p[1]]             # Data\n",
     "        lines_pearson.append( pearson_cor(var1, var2, name1, name2, n_species) )\n",
     "        lines_spearman.append( spearman_cor(var1, var2, name1, name2, n_species) )\n",
     "    # Write files\n",
@@ -428,6 +478,7 @@
     "        f.writelines(lines_pearson)\n",
     "    with open(f'/mnt/data/sur/users/mrivera/Logs/spearman{n_species}_correlation.txt', 'w') as f:\n",
     "        f.writelines(lines_spearman)\n",
+    "\n",
     "\n",
     "# Run it\n",
     "run_correlation(data20, 20)\n",
@@ -484,39 +535,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2eddaea",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "* extinctions is correlated with bray_curtis with r=-0.02 for 20 species. Statistical significance: pval=8.17e-08\n",
-    "\n",
-    "* extinctions is correlated with keystone with r=-0.01 for 20 species. Statistical significance: pval=2.46e-07\n",
-    "\n",
-    "* extinctions is correlated with relative with r=-0.13 for 20 species. Statistical significance: pval=0.00e+00\n",
-    "\n",
-    "* bray_curtis is correlated with keystone with r=1.00 for 20 species. Statistical significance: pval=0.00e+00\n",
-    "\n",
-    "* bray_curtis is correlated with relative with r=0.08 for 20 species. Statistical significance: pval=6.66e-194\n",
-    "\n",
-    "* keystone is correlated with relative with r=0.08 for 20 species. Statistical significance: pval=1.28e-173\n",
-    "\n",
-    "## Run with 100 species\n",
-    "* extinctions is correlated with bray_curtis with r=-0.02 for 100 species. Statistical significance: pval=8.17e-08\n",
-    "\n",
-    "* extinctions is correlated with keystone with r=-0.01 for 100 species. Statistical significance: pval=2.46e-07\n",
-    "\n",
-    "* extinctions is correlated with relative with r=-0.13 for 100 species. Statistical significance: pval=0.00e+00\n",
-    "\n",
-    "* bray_curtis is correlated with keystone with r=1.00 for 100 species. Statistical significance: pval=0.00e+00\n",
-    "\n",
-    "* bray_curtis is correlated with relative with r=0.08 for 100 species. Statistical significance: pval=6.66e-194\n",
-    "\n",
-    "* keystone is correlated with relative with r=0.08 for 100 species. Statistical significance: pval=1.28e-173"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9b52a0aa",
    "metadata": {},
    "source": [
@@ -538,9 +556,11 @@
     "# Convert to pandas DataFrame if it's not already\n",
     "data20_df = pd.DataFrame(data20)\n",
     "\n",
-    "# Then create pairplot\n",
-    "pairplot = sns.pairplot(data20_df[['extinctions', 'bray_curtis', 'keystone', 'relative']])\n",
-    "pairplot.savefig('/mnt/data/sur/users/mrivera/Plots/pairplot.png', dpi=300)\n",
+    "# Create pairplot with only lower triangle\n",
+    "pairplot = sns.pairplot(data20_df[['extinctions', 'bray_curtis', 'keystone', 'relative']], corner=True)\n",
+    "pairplot.fig.suptitle('Pairplot for 20 Species', fontsize=16, fontweight='bold', y=1.0)\n",
+    "plt.tight_layout()\n",
+    "pairplot.savefig('/mnt/data/sur/users/mrivera/Plots/pairplot.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()"
    ]
   },
@@ -555,85 +575,6 @@
     "import matplotlib.image as mpimg\n",
     "\n",
     "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/pairplot.png')\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.imshow(img)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e7c4bd62",
-   "metadata": {},
-   "source": [
-    "# Distribution of keystoness and Bray-Curtis\n",
-    "\n",
-    "To determine the optimal number of bins, we can use the Freedman–Diaconis rule. However, since the interquartile range (IQR) is equal to zero in this case, the rule cannot be applied. Therefore, we use Scott’s rule as an alternative."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf7e66ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | eval: false\n",
-    "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Calculate optimal number of bins\n",
-    "def bin_calc(x):\n",
-    "    std = np.std(x)\n",
-    "    n = len(x)\n",
-    "    h_scott = 3.5 * std / (n ** (1/3))\n",
-    "    bins_scott = int(np.ceil((x.max() - x.min()) / h_scott))\n",
-    "    return bins_scott\n",
-    "\n",
-    "# Compute the number of bins\n",
-    "x1 = np.round(Ks20, 5)\n",
-    "bins1 = bin_calc(x1)\n",
-    "x2 = np.round(Ks100, 5)\n",
-    "bins2 = bin_calc(x2)\n",
-    "\n",
-    "# Generate the histogram for keystoness\n",
-    "plt.clf()  # Clear the entire figure\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
-    "ax1.hist(x1, bins=bins1, density=True, histtype='step',  color='blue', label='S20')  # 'step' draws only the outline\n",
-    "ax1.hist(x2, bins=bins2, density=True, histtype='step', color='red', label='S100')  # 'step' draws only the outline\n",
-    "ax1.set_xlabel('Keystoness')\n",
-    "ax1.set_ylabel('Frequency')\n",
-    "ax1.set_title('Keystoness distribution')\n",
-    "\n",
-    "# Compute the number of bins\n",
-    "x1 = np.round(Bc20, 5)\n",
-    "x2 = np.round(Bc100, 5)\n",
-    "bins1 = bin_calc(x1)\n",
-    "bins2 = bin_calc(x2)\n",
-    "ax2.hist(x1, bins=bins1, density=True, histtype='step',  color='blue', label='S20')  # 'step' draws only the outline\n",
-    "ax2.hist(x2, bins=bins2, density=True, histtype='step', color='red', label='S100')  # 'step' draws only the outline\n",
-    "ax2.set_xlabel('Bray-Curtis')\n",
-    "ax2.set_ylabel('Frequency')\n",
-    "ax2.set_title('Bray-Curtis distribution')\n",
-    "plt.legend()\n",
-    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/both-distr.png', dpi = 300)  # Saves as PNG\n",
-    "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc438f40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | eval: false\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
-    "\n",
-    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/both-distr.png')\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.imshow(img)\n",
     "plt.axis('off')\n",
