Modified EDA file

--- a/JupyBooks/EDA-tgts.ipynb
+++ b/JupyBooks/EDA-tgts.ipynb
@@ -549,18 +549,27 @@
    "outputs": [],
    "source": [
     "# | eval: false\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "\n",
     "# Convert to pandas DataFrame if it's not already\n",
     "data20_df = pd.DataFrame(data20)\n",
+    "cols = ['extinctions', 'bray_curtis', 'keystone', 'relative']\n",
     "\n",
     "# Create pairplot with only lower triangle\n",
+    "plt.clf()  # Clear the entire figure\n",
     "pairplot = sns.pairplot(data20_df[['extinctions', 'bray_curtis', 'keystone', 'relative']], corner=True)\n",
-    "pairplot.fig.suptitle('Pairplot for 20 Species', fontsize=16, fontweight='bold', y=1.0)\n",
+    "\n",
+    "# Loop through the diagonal axes and set y labels\n",
+    "for ax in pairplot.axes[:, 0]:  # leftmost column\n",
+    "    if ax is not None:\n",
+    "        ax.set_ylabel(ax.get_ylabel(), rotation=0, labelpad=40, fontsize=10)\n",
+    "\n",
+    "pairplot.fig.suptitle('Pairplot for 20 Species', fontsize=16, fontweight='bold', y=0.995)\n",
+    "\n",
     "plt.tight_layout()\n",
-    "pairplot.savefig('/mnt/data/sur/users/mrivera/Plots/pairplot.png', dpi=300, bbox_inches='tight')\n",
+    "pairplot.savefig('/mnt/data/sur/users/mrivera/Plots/pairplot_python.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()"
    ]
   },
